rollout/championships/templates/championships-dr.yaml
apiVersion: networking.istio.io/v1alpha3
kind: DestinationRule
metadata:
  name: championships-dr
spec:
  host: championships
  subsets:
    - name: v1
      labels:
        version: v1
